src/test/ui/lifetime-errors/ex2d-push-inference-variable-2.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/ex2d-push-inference-variable-2.rs:17:13
   |
17 |     let b = Ref { data: y.data };
   |             ^^^

error: aborting due to previous error

